# form

./: .clang-format  .gitignore  CMakeLists.txt  README.md  formConfig.cmake.in  justfile  package.xml  pyproject.toml
config/: 25.10.03_full.yaml  25.10.03_short_verify.yaml  25.10.03_verify_works.yaml
experiments/: ablations.py  animation.py  area_under_curve.py  baseline_tables.py  baseline_tables_speed.py  env.py  features_viz.py  header_viz.py  window_size.py
form/: constraints.cpp  constraints.hpp  form.cpp  form.hpp  map.cpp  map.hpp  point_types.hpp  timing.hpp
form/classic/: extraction.hpp  factor.cpp  factor.hpp  feature.hpp
form/feature/: factor.cpp  factor.hpp
form/mixed/: extraction.hpp  factor.cpp  factor.hpp  feature.hpp
form/optimization/: gtsam.hpp
form/planar/: extraction.hpp  factor.cpp  factor.hpp  feature.hpp
form/point/: extraction.hpp  factor.cpp  factor.hpp  feature.hpp
form/separate/: extraction.hpp  factor.cpp  factor.hpp  feature.hpp
python/: CMakeLists.txt  bindings.cpp
python/form/: __init__.py
scripts/: feature_param_tuning.py  rerun_map.py
tests/: CMakeLists.txt  test_ClassicFactor.cpp  test_MixedFactor.cpp  test_PlanarFactor.cpp  test_PointFactor.cpp  test_SeparateFactor.cpp
